# cgn

./: CHANGELOG  CHANGELOG.md  Cargo.toml  README  README.md
.github/workflows/: coverage.yml  tests.yml
npmPackage/: cgn.js  package.json
npmPkg/: README.md  cgn.d.ts  cgn_bg.js  cgn_bg.wasm  cgn_bg.wasm.d.ts
src/: lib.rs
src/compression/: bincode.rs  dynamic_huffman.rs  huffman.rs  opening_huffman.rs
src/compression/utils/: mod.rs  score_move.rs  sorted_opening_moves.txt
src/pgn_data/: mod.rs  san_plus_wrapper.rs
